ingress/multipaths/httpd.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  containers:
    - name: httpd-container
      image: httpd
      ports:
        - name: httpd-port
          containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: httpd
